--- a/src/app/countries/components/country-table/country-table.component.html
+++ b/src/app/countries/components/country-table/country-table.component.html
@@ -7,7 +7,7 @@
     <thead>
       <tr>
         <th>#</th>
-        <th>Icon</th>
+        <th>Código</th>
         <th>Bandera</th>
         <th>País</th>
         <th>Capital</th>
