--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -1,11 +1,13 @@
-<h2>Por capital</h2>
+<h2>Por Capital</h2>
 <hr>
 
 <div class="row">
   <div class="col">
     <!-- Searchbox -->
+    <!-- (onValue)="searchByCapital($event)" -->
    <shared-search-box
-   (onValue)="searchByCapital($event)"
+   (onDebounce)="searchByCapital($event)"
+   [initialValue]="initialValue"
    placeholder="Buscar por capital"></shared-search-box>
   </div>
 </div>
@@ -13,6 +15,7 @@
 <div class="row">
   <div class="col">
     <hr>
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
    <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
