--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,18 +1,24 @@
-<h2>Por Region</h2>
-<hr>
+<h2>Por Región</h2>
+<hr />
 
 <div class="row">
-  <div class="col">
+  <div class="col text-center">
     <!-- Searchbox -->
-   <shared-search-box
-   (onValue)="searchByRegion($event)"
-   placeholder="Buscar por región"></shared-search-box>
+    <button
+      *ngFor="let region of regions"
+      class="btn mx-2 "
+      [ngClass]="{'btn-outline-primary': selectedRegion === region}"
+
+      (click)="searchByRegion(region)"
+    >
+      {{ region }}
+    </button>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
-    <hr>
-   <countries-table [countries]="countries"></countries-table>
+    <hr />
+    <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
